# Abyss

./: .gitignore  README.md  setup_abyss.sh
backend/: .env.example  core_bridge.py  main.py  requirements.txt
backend/database/: connection.py  models.py
backend/routers/: auth.py  branches.py  commits.py  repos.py
core/: CMakeList.txt  CMakeLists.txt
core/include/abyss/: branch.h  commit.h  diff.h  diff_types.h  index.h  index_types.h  lock.h  object_store.h  object_types.h  recovery.h  repository.h  types.h  utils.h
core/src/: branch.cpp  commit.cpp  diff.cpp  index.cpp  lock.cpp  main.cpp  object_store.cpp  recovery.cpp  repository.cpp  utils.cpp
core/src/commands/: add.cpp  branch_cmd.cpp  checkout.cpp  commit_cmd.cpp  diff_cmd.cpp  gc.cpp  init.cpp  log.cpp  recover.cpp  status.cpp
core/tests/: test_commit.cpp  test_diff.cpp  test_index.cpp  test_object_store.cpp
frontend/: package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: branches.js  commits.js  repos.js
frontend/src/components/: BranchSelector.jsx  CommitList.jsx  DiffViewer.jsx  FileTree.jsx  Navbar.jsx  RepoCard.jsx  Sidebar.jsx
frontend/src/hooks/: useAuth.js  useCommits.js  useRepo.js
frontend/src/pages/: Commit.jsx  Dashboard.jsx  Login.jsx  NewRepo.jsx  Register.jsx  Repo.jsx
frontend/src/store/: authStore.js  repoStore.js
